<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_label">Bill</string>
    <string name="percent_label">Percent</string>
    <string name="percent_num_label">00%</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="total_label">Total</string>
    <string name="total_num_label">$0.00</string>
    <string name="reset_button">Reset</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="tip_percent_num">$0.00</string>
    <string name="none_radioBtn">None</string>
    <string name="tip_radioBtn">Tip</string>
    <string name="total_radioBtn">Total</string>
    <string name="split_lbl">Split</string>
    <string name="per_person">Per Person</string>
    <string name="per_person_tv">$0.00</string>
    <string name="rounding_label">Rounding</string>
    <string name="apply">Apply</string>
    <string name="_tip">Tip</string>
    <string name="_split">Split</string>
    <string name="tip">Tip</string>
    <string name="split">Split</string>

    <string-array name="split_array">
    <item>No</item>
    <item>2 ways</item>
    <item>3 ways</item>
    <item>4 ways</item>
    </string-array>
</resources>
