<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/billLabel"
            style="@style/TextView.Label"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/bill_label"
            android:textColorLink="@android:color/holo_red_dark"
            app:layout_constraintEnd_toStartOf="@+id/billEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextView.Label"
            android:id="@+id/percentLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:text="@string/percent_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tipPercentNumLabel"
            style="@style/TextView"
            android:layout_marginEnd="164dp"
            android:layout_marginTop="164dp"
            android:text="@string/tip_percent_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tipPercentLabel"
            style="@style/TextView.Label"
            android:layout_width="48dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitLbl" />

        <EditText
            android:id="@+id/billEditText"
            style="@style/TextView.EditText"
            android:layout_marginStart="84dp"
            android:layout_marginTop="24dp"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PercentNumberLabel"
            style="@style/TextView"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="48dp"
            android:text="@string/percent_num_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/applyButton"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="308dp"
            android:layout_marginEnd="16dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/TotalLabel"
            style="@style/TextView.Label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="204dp"
            android:text="@string/total_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalTextView"
            style="@style/TextView"
            android:layout_marginEnd="164dp"
            android:layout_marginTop="204dp"
            android:text="@string/total_num_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ResetButton"
            style="@style/ResetButton"
            android:layout_marginTop="432dp"
            android:text="@string/reset_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/roundingTv"
            style="@style/TextView.Label"
            android:layout_marginStart="16dp"
            android:layout_marginTop="284dp"
            android:text="@string/rounding_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/PaddedWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="124dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ResetButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toEndOf="@+id/roundingTv"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/noneRadioBtn"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:fontFamily="Arial"
                android:text="@string/none_radioBtn"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="164dp" />

            <RadioButton
                android:id="@+id/tipRadioBtn"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:fontFamily="Arial"
                android:text="@string/tip_radioBtn"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/noneRadioBtn"
                tools:layout_editor_absoluteY="196dp" />

            <RadioButton
                android:id="@+id/totalRadioBtn"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:fontFamily="Arial"
                android:text="@string/total_radioBtn"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tipRadioBtn"
                tools:layout_editor_absoluteY="228dp" />

        </RadioGroup>


        <Spinner
            android:id="@+id/splitSpinner"
            style="@style/TextView.SpinnerItem"
            android:layout_width="48dp"
            android:layout_height="27dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="112dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toEndOf="@+id/splitLbl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031"
            tools:dropDownSelector="@style/DropdownItem"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/perPersonLbl"
            style="@style/TextView.Label"
            android:layout_marginStart="16dp"
            android:layout_marginTop="244dp"
            android:text="@string/per_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/perPersonTv"
            style="@style/TextView"
            android:layout_marginEnd="164dp"
            android:layout_marginTop="244dp"
            android:text="@string/per_person_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/PaddedWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/splitLbl"
            style="@style/TextView.Label"
            android:layout_width="70dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:text="@string/_split"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
